# ldf

./: .gitignore  AGENT.md  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml
.agent/commands/: implement-task.md
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  documentation.yml  feature-request.yml  performance.yml  question.yml
.github/workflows/: build.yml  lint.yml  publish.yml  spec-lint.yml  test.yml
.ldf/: config.yaml  guardrails.yaml
docs/: README.md  answerpacks.md  architecture.md  concepts.md  customization.md  getting-started.md  glossary.md  multi-agent-workflow.md  quickstart.md  task-format.md  vscode-extension.md
docs/feature-requests/: update-command.md
docs/installation/: README.md  linux-fedora.md  linux-ubuntu.md  macos.md  quick-install.md  windows.md
docs/reference/: commands.md  file-structure.md  troubleshooting.md
docs/research/: agent-architecture.md  ink-react-cli-migration-v2.md  ink-react-cli-migration.md  ldf-evolution-overview.md  sail-methodology.md
docs/tutorials/: 01-first-spec.md  02-guardrails.md  03-question-packs.md  04-multi-agent-review.md  05-mcp-setup.md
docs/visual-guides/: guardrail-examples.md  workflows.md
examples/: RECOMMENDATIONS.md
examples/go-service/: AGENT.md  README.md
examples/python-django/: AGENT.md  README.md
examples/python-fastapi/: AGENT.md  README.md
examples/python-flask/: AGENT.md  README.md
examples/typescript-node/: AGENT.md  README.md
framework/macros/: clarify-first.md
framework/question-packs/: README.md
framework/templates/: design.md  requirements.md  tasks.md
integrations/ci-cd/: README.md  github-actions.yaml  gitlab-ci.yaml
ldf/: __init__.py  audit.py  audit_api.py  cli.py  convert.py  coverage.py  detection.py  docs.py  doctor.py  hooks.py  init.py  lint.py  mcp_config.py  mcp_health.py  project_resolver.py  prompts.py  spec.py  template.py  update.py
ldf/_framework/: descriptions.yaml
ldf/_mcp_servers/: MCP_SETUP.md
mcp-servers/: MCP_SETUP.md
multi-agent/: README.md
scripts/: test_mcp_servers.py
tests/: conftest.py  test_audit.py  test_audit_api.py  test_cli.py  test_config.py  test_convert.py  test_coverage.py  test_descriptions.py  test_detection.py  test_docs.py  test_doctor.py  test_guardrail_loader.py  test_guardrail_validator.py  test_hooks.py  test_init.py  test_lint.py  test_logging.py  test_mcp_config.py  test_mcp_health.py  test_project_resolver.py  test_prompts.py  test_spec.py  test_spec_list.py  test_spec_parser.py  test_template.py  test_template_mgmt.py  test_update.py  test_workspace_commands.py  test_workspace_models.py
vscode-extension/: README.md  package.json
(+95 files in other folders)
